data/forge_javadoc/1.9.4/processed/net_minecraft_entity_player_EntityPlayer.md
# EntityPlayer

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity → net.minecraft.entity.EntityLivingBase → net.minecraft.entity.player.EntityPlayer

## Class signature

```java
public abstract class EntityPlayer extends EntityLivingBase
```

## Constructors

- `EntityPlayer(World worldIn, com.mojang.authlib.GameProfile gameProfileIn)`

## Methods

- `void addChatComponentMessage(ITextComponent chatComponent)`
- `void addExhaustion(float exhaustion)`
- `void addExperience(int amount)`
- `void addExperienceLevel(int levels)`
- `void addMovementStat(double p_71000_1_, double p_71000_3_, double p_71000_5_)`
- `void addPrefix(ITextComponent prefix)` — Add a prefix to the player's username in chat
- `void addScore(int scoreIn)`
- `void addStat(StatBase stat)`
- `void addStat(StatBase stat, int amount)`
- `void addSuffix(ITextComponent suffix)` — Add a suffix to the player's username in chat
- `void addToPlayerScore(Entity entityIn, int amount)`
- `protected void applyEntityAttributes()`
- `void applyEntityCollision(Entity entityIn)`
- `boolean attackEntityFrom(DamageSource source, float amount)`
- `void attackTargetEntityWithCurrentItem(Entity targetEntity)`
- `boolean canAttackPlayer(EntityPlayer other)`
- `boolean canEat(boolean ignoreHunger)`
- `boolean canHarvestBlock(IBlockState state)`
- `boolean canOpen(LockCode code)`
- `boolean canPlayerEdit(BlockPos pos, EnumFacing facing, ItemStack stack)`
- `protected boolean canTriggerWalking()`
- `void clonePlayer(EntityPlayer oldPlayer, boolean respawnFromEnd)`
- `void closeScreen()`
- `protected CooldownTracker createCooldownTracker()`
- `protected void damageArmor(float damage)`
- `protected void damageEntity(DamageSource damageSrc, float damageAmount)`
- `protected void damageShield(float damage)`
- `void dismountRidingEntity()`
- `void displayGui(IInteractionObject guiOwner)`
- `void displayGUIChest(IInventory chestInventory)`
- `void displayGuiCommandBlock(TileEntityCommandBlock p_184824_1_)`
- `void displayGuiEditCommandCart(CommandBlockBaseLogic p_184809_1_)`
- `void displayVillagerTradeGui(IMerchant villager)`
- `EntityItem dropItem(boolean dropAll)`
- `EntityItem dropItem(ItemStack itemStackIn, boolean unused)`
- `EntityItem dropItem(ItemStack droppedItem, boolean dropAround, boolean traceItem)`
- `ItemStack dropItemAndGetStack(EntityItem p_184816_1_)`
- `protected void entityInit()`
- `void fall(float distance, float damageMultiplier)`
- `float getAbsorptionAmount()`
- `float getAIMoveSpeed()`
- `boolean getAlwaysRenderNameTagForRender()`
- `java.lang.Iterable<ItemStack> getArmorInventoryList()`
- `float getArmorVisibility()`
- `BlockPos getBedLocation()`
- `BlockPos getBedLocation(int dimension)` — A dimension aware version of getBedLocation.
- `float getBedOrientationInDegrees()`
- `static BlockPos getBedSpawnLocation(World worldIn, BlockPos bedLocation, boolean forceSpawn)`
- `<T> T getCapability(Capability<T> capability, EnumFacing facing)` — Retrieves the handler for the capability requested on the specific side.
- `float getCooldownPeriod()`
- `CooldownTracker getCooldownTracker()`
- `float getCooledAttackStrength(float adjustTicks)`
- `protected SoundEvent getDeathSound()`
- `float getDefaultEyeHeight()` — Returns the default eye height of the player
- `@Deprecated float getDigSpeed(IBlockState state)`
- `float getDigSpeed(IBlockState state, BlockPos pos)`
- `ITextComponent getDisplayName()`
- `java.lang.String getDisplayNameString()` — Get the currently computed display name, cached for efficiency.
- `protected int getExperiencePoints(EntityPlayer player)`
- `float getEyeHeight()`
- `protected SoundEvent getFallSound(int heightIn)`
- `FoodStats getFoodStats()`
- `com.mojang.authlib.GameProfile getGameProfile()`
- `java.lang.Iterable<ItemStack> getHeldEquipment()`
- `protected SoundEvent getHurtSound()`
- `InventoryEnderChest getInventoryEnderChest()`
- `ItemStack getItemStackFromSlot(EntityEquipmentSlot slotIn)`
- `float getLuck()`
- `int getMaxInPortalTime()`
- `java.lang.String getName()`
- `static java.util.UUID getOfflineUUID(java.lang.String username)`
- `int getPortalCooldown()`
- `java.util.Collection<ITextComponent> getPrefixes()`
- `EnumHandSide getPrimaryHand()`
- `int getScore()`
- `int getSleepTimer()`
- `SoundCategory getSoundCategory()`
- `protected SoundEvent getSplashSound()`
- `java.util.Collection<ITextComponent> getSuffixes()`
- `protected SoundEvent getSwimSound()`
- `Team getTeam()`
- `static java.util.UUID getUUID(com.mojang.authlib.GameProfile profile)`
- `Scoreboard getWorldScoreboard()`
- `int getXPSeed()`
- `double getYOffset()`
- `void handleStatusUpdate(byte id)`
- `boolean hasAchievement(Achievement achievementIn)`
- `boolean hasCapability(Capability<?> capability, EnumFacing facing)` — Determines if this object has support for the capability in question on the specific side.
- `boolean hasReducedDebug()`
- `EnumActionResult interact(Entity entityIn, ItemStack stack, EnumHand hand)`
- `boolean isAllowEdit()`
- `abstract boolean isCreative()`
- `boolean isEntityInsideOpaqueBlock()`
- `boolean isInvisibleToPlayer(EntityPlayer player)`
- `protected boolean isMovementBlocked()`
- `protected boolean isPlayer()`
- `boolean isPlayerFullyAsleep()`
- `boolean isPlayerSleeping()`
- `boolean isPushedByWater()`
- `@Deprecated boolean isSpawnForced()`
- `boolean isSpawnForced(int dimension)` — A dimension aware version of isSpawnForced.
- `abstract boolean isSpectator()`
- `boolean isUser()`
- `boolean isWearing(EnumPlayerModelParts part)`
- `void jump()`
- `void moveEntityWithHeading(float strafe, float forward)`
- `void onCriticalHit(Entity entityHit)`
- `void onDeath(DamageSource cause)`
- `void onEnchantmentCritical(Entity entityHit)`
- `void onKillEntity(EntityLivingBase entityLivingIn)`
- `void onLivingUpdate()`
- `void onUpdate()`
- `void openBook(ItemStack stack, EnumHand hand)`
- `void openEditSign(TileEntitySign signTile)`
- `void openGui(java.lang.Object mod, int modGuiId, World world, int x, int y, int z)` — Opens a GUI with this player, uses FML's IGuiHandler system.
- `void openGuiHorseInventory(EntityHorse horse, IInventory inventoryIn)`
- `void playSound(SoundEvent soundIn, float volume, float pitch)`
- `void preparePlayerToSpawn()`
- `void readEntityFromNBT(NBTTagCompound compound)`
- `void refreshDisplayName()` — Force the displayed name to refresh
- `void removeExperienceLevel(int levels)`
- `boolean replaceItemInInventory(int inventorySlot, ItemStack itemStackIn)`
- `void resetCooldown()`
- `protected void resetHeight()`
- `void respawnPlayer()`
- `boolean sendCommandFeedback()`
- `void sendPlayerAbilities()`
- `void setAbsorptionAmount(float amount)`
- `void setDead()`
- `void setGameType(WorldSettings.GameType gameType)`
- `void setInWeb()`
- `void setItemStackToSlot(EntityEquipmentSlot slotIn, ItemStack stack)`
- `void setPrimaryHand(EnumHandSide hand)`
- `void setReducedDebug(boolean reducedDebug)`
- `void setScore(int scoreIn)`
- `void setSpawnChunk(BlockPos pos, boolean forced, int dimension)` — A dimension aware version of setSpawnChunk.
- `void setSpawnPoint(BlockPos pos, boolean forced)`
- `boolean shouldHeal()`
- `void spawnSweepParticles()`
- `void takeStat(StatBase stat)`
- `EntityPlayer.SleepResult trySleep(BlockPos bedLocation)`
- `protected void updateEntityActionState()`
- `void updateRidden()`
- `protected void updateSize()`
- `void wakeUpPlayer(boolean immediately, boolean updateWorldFlag, boolean setSpawn)`
- `void writeEntityToNBT(NBTTagCompound compound)`
- `int xpBarCap()`

## Fields

- `float cameraYaw`
- `PlayerCapabilities capabilities`
- `double chasingPosX`
- `double chasingPosY`
- `double chasingPosZ`
- `float experience`
- `int experienceLevel`
- `int experienceTotal`
- `float eyeHeight`
- `EntityFishHook fishEntity`
- `protected int flyToggleTimer`
- `protected FoodStats foodStats`
- `InventoryPlayer inventory`
- `Container inventoryContainer`
- `protected static DataParameter<java.lang.Byte> MAIN_HAND`
- `Container openContainer`
- `static java.lang.String PERSISTED_NBT_TAG`
- `protected static DataParameter<java.lang.Byte> PLAYER_MODEL_FLAG`
- `BlockPos playerLocation`
- `float prevCameraYaw`
- `double prevChasingPosX`
- `double prevChasingPosY`
- `double prevChasingPosZ`
- `float renderOffsetX`
- `float renderOffsetY`
- `float renderOffsetZ`
- `protected boolean sleeping`
- `protected float speedInAir`
- `protected float speedOnGround`
- `int xpCooldown`